<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/group_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:rotationX="0">

    <TextView
        android:id="@+id/groupName1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/groupname_displayText"
        android:textAlignment="center"
        android:textSize="34sp" />

    <Button
        android:id="@+id/removeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_group_displayText" />

    <Button
        android:id="@+id/renameGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rename_group_displayText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/MemberTableLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:id="@+id/TableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:id="@+id/groupMember1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/groupmember1_displayText" />

                    <TextView
                        android:id="@+id/groupMemberPayment1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/memberdebt1_displayText" />

                    <Button
                        android:id="@+id/addCharge1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_charge_displayText" />

                    <Button
                        android:id="@+id/removeGroupMember1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remove_member_displayText" />
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/groupMember2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/groupmember2_displayText" />

                    <TextView
                        android:id="@+id/groupMemberPayment2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/memberdebt2_displayText" />

                    <Button
                        android:id="@+id/addCharge2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_charge_displayText" />

                    <Button
                        android:id="@+id/removeGroupMember2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remove_member_displayText" />
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/groupMember3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/groupmember3_displayText" />

                    <TextView
                        android:id="@+id/groupMemberPayment3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/memberdebt3_displayText" />

                    <Button
                        android:id="@+id/addCharge3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_charge_displayText" />

                    <Button
                        android:id="@+id/removeGroupMember3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remove_member_displayText" />

                </TableRow>

                <TableRow
                    android:id="@+id/TableRow4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/groupMember4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/groupmember4_displayText" />

                    <TextView
                        android:id="@+id/groupMemberPayment4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/memberdebt4_displayText" />

                    <Button
                        android:id="@+id/addCharge4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_charge_displayText" />

                    <Button
                        android:id="@+id/removeGroupMember4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remove_member_displayText" />

                </TableRow>

                <TableRow
                    android:id="@+id/TableRow5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/groupMember5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/groupmember5_displayText" />

                    <TextView
                        android:id="@+id/groupMemberPayment5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/memberdebt5_displayText" />

                    <Button
                        android:id="@+id/addCharge5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_charge_displayText" />

                    <Button
                        android:id="@+id/removeGroupMember5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remove_member_displayText" />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>