<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layoutDescription="@xml/activity_creating_group_scene">

    <EditText
        android:id="@+id/groupNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:ems="10"
        android:hint="@string/enter_a_group_name_label"
        android:inputType="text"
        android:text="@string/group_name_label"
        android:textAlignment="center" />

    <Button
        android:id="@+id/submitGroupData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="212dp"
        android:text="@string/submit_label"
        android:translationY="100dp" />

</LinearLayout>